# rust-webinar

./: README.md
dotnet-examples/object-passing/: Program.cs  object-passing.csproj
ownership-and-borrowing/: Cargo.toml
workspaces-demo/: Cargo.toml
workspaces-demo/calculator-app/: Cargo.toml  lib.rs
workspaces-demo/numeric-lib/: Cargo.toml
workspaces-demo/numeric-lib/src/: lib.rs
workspaces-demo/numeric-lib/src/arithmetic/: mod.rs
workspaces-demo/scientific-lib/: Cargo.toml
workspaces-demo/scientific-lib/src/: lib.rs
workspaces-demo/scientific-lib/src/factorial/: mod.rs
workspaces-demo/scientific-lib/src/fibonacci/: iterative.rs  mod.rs  recursive.rs
